; ModuleID = '/home/carl/AnghaBench/linux/arch/powerpc/mm/extr_fault.c_bad_key_fault_exception.c'
source_filename = "/home/carl/AnghaBench/linux/arch/powerpc/mm/extr_fault.c_bad_key_fault_exception.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pt_regs = type { i32 }

@SIGSEGV = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pt_regs*, i64, i32)* @bad_key_fault_exception to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bad_key_fault_exception(%struct.pt_regs* %0, i64 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.pt_regs*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store %struct.pt_regs* %0, %struct.pt_regs** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load %struct.pt_regs*, %struct.pt_regs** %5, align 8
  %9 = call i32 @user_mode(%struct.pt_regs* %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %13, label %11

11:                                               ; preds = %3
  %12 = load i32, i32* @SIGSEGV, align 4
  store i32 %12, i32* %4, align 4
  br label %18

13:                                               ; preds = %3
  %14 = load %struct.pt_regs*, %struct.pt_regs** %5, align 8
  %15 = load i64, i64* %6, align 8
  %16 = load i32, i32* %7, align 4
  %17 = call i32 @_exception_pkey(%struct.pt_regs* %14, i64 %15, i32 %16)
  store i32 0, i32* %4, align 4
  br label %18

18:                                               ; preds = %13, %11
  %19 = load i32, i32* %4, align 4
  ret i32 %19
}

declare dso_local i32 @user_mode(%struct.pt_regs*) #1

declare dso_local i32 @_exception_pkey(%struct.pt_regs*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
